# python-project-template

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  Makefile  README.md  cookiecutter.json  pyproject.toml
.tekton/: main-pull-request.yaml  python-project-template-main-pull-request.yaml  python-project-template-main-push.yaml
hooks/: pre_gen_project.py
python_project_template/: __main__.py  core.py
tests/: test_core.py  test_main.py
{{ cookiecutter.project_slug }}/: .tool-versions  Dockerfile  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.tekton/: main-pull-request.yaml  main-push.yaml
{{ cookiecutter.project_slug }}/tests/: test_main.py  test_triathlon.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/: __main__.py  triathlon.py
