[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    # Feel free to add or change authors
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" },
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = "~= {{ cookiecutter.python_version }}.0"
dependencies = [
    # 'uv add/remove XXX' to add and remove dependencies
    "rich ~=14.0",
]

[project.urls]
homepage = "https://github.com/app-sre/{{ cookiecutter.project_slug }}"
repository = "https://github.com/app-sre/{{ cookiecutter.project_slug }}"
documentation = "https://github.com/app-sre/{{ cookiecutter.project_slug }}"

[dependency-groups]
dev = [
    # Development dependencies
    "ruff ~=0.7",
    "mypy ~=1.13",
    "pytest ~=9.0.2",
    "pytest-cov ~=7.0.0",
]

[project.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.project_module }}.__main__:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["{{ cookiecutter.project_module }}"]

[tool.hatch.build.targets.wheel]
only-include = ["{{ cookiecutter.project_module }}"]

# Ruff configuration
[tool.ruff]
line-length = 88
src = ["{{ cookiecutter.project_module }}"]
extend-exclude = [
    # exclude some common cache and tmp directories
    ".local",
    ".cache",
    "tmp",
]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",     # Missing copyright header
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line required before class docstring
    "D211",    # No blank lines allowed before class docstring
    "D212",    # multi-line-summary-first-line
    "D213",    # multi-line-summary-second-line
    "D4",      # Doc string style
    "E501",    # Line too long
    "G004",    # Logging statement uses f-string
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
    "S101",    # Use of assert detected. Pytest uses assert
    "S404",    # subprocess import
    "EM101",   # Exception must not use a string literal, assign to variable first
    "EM102",   # Exception must not use an f-string literal, assign to variable first
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY300",  # try-consider-else
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_module }}"]

# Mypy configuration
[tool.mypy]
files = ["{{ cookiecutter.project_module }}", "tests"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = ["my_3rd_party_module.*"]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
